// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default-binding.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source from "x";

=====================================output=====================================
import source from "x";

================================================================================
`;

exports[`import-source.js [acorn] format 1`] = `
"Unexpected token (1:15)
> 1 | import source x from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`import-source.js [espree] format 1`] = `
"Unexpected token x (1:15)
> 1 | import source x from "x";
    |               ^
  2 |
Cause: Unexpected token x"
`;

exports[`import-source.js [meriyah] format 1`] = `
"Import source must be string (1:15)
> 1 | import source x from "x";
    |               ^
  2 |
Cause: [1:15]: Import source must be string"
`;

exports[`import-source.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source x from "x";

=====================================output=====================================
import source x from "x";

================================================================================
`;

exports[`import-source-attributes-declaration.js [acorn] format 1`] = `
"Unexpected token (1:15)
> 1 | import source s from "x" with { attr: "val" };
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`import-source-attributes-declaration.js [espree] format 1`] = `
"Unexpected token s (1:15)
> 1 | import source s from "x" with { attr: "val" };
    |               ^
  2 |
Cause: Unexpected token s"
`;

exports[`import-source-attributes-declaration.js [meriyah] format 1`] = `
"Import source must be string (1:15)
> 1 | import source s from "x" with { attr: "val" };
    |               ^
  2 |
Cause: [1:15]: Import source must be string"
`;

exports[`import-source-attributes-declaration.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source s from "x" with { attr: "val" };

=====================================output=====================================
import source s from "x" with { attr: "val" };

================================================================================
`;

exports[`import-source-attributes-expression.js [acorn] format 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("x", { with: { attr: "val" } });
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`import-source-attributes-expression.js [espree] format 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("x", { with: { attr: "val" } });
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`import-source-attributes-expression.js [meriyah] format 1`] = `
"Unexpected token: 'identifier' (1:13)
> 1 | import.source("x", { with: { attr: "val" } });
    |             ^
  2 |
Cause: [1:13]: Unexpected token: 'identifier'"
`;

exports[`import-source-attributes-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import.source("x", { with: { attr: "val" } });

=====================================output=====================================
import.source("x", { with: { attr: "val" } });

================================================================================
`;

exports[`import-source-binding-from.js [acorn] format 1`] = `
"Unexpected token (1:20)
> 1 | import source from from "x";
    |                    ^
  2 |
Cause: Unexpected token (1:19)"
`;

exports[`import-source-binding-from.js [espree] format 1`] = `
"Unexpected token from (1:20)
> 1 | import source from from "x";
    |                    ^
  2 |
Cause: Unexpected token from"
`;

exports[`import-source-binding-from.js [meriyah] format 1`] = `
"Import source must be string (1:23)
> 1 | import source from from "x";
    |                       ^
  2 |
Cause: [1:23]: Import source must be string"
`;

exports[`import-source-binding-from.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source from from "x";

=====================================output=====================================
import source from from "x";

================================================================================
`;

exports[`import-source-binding-source.js [acorn] format 1`] = `
"Unexpected token (1:15)
> 1 | import source source from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`import-source-binding-source.js [espree] format 1`] = `
"Unexpected token source (1:15)
> 1 | import source source from "x";
    |               ^
  2 |
Cause: Unexpected token source"
`;

exports[`import-source-binding-source.js [meriyah] format 1`] = `
"Import source must be string (1:20)
> 1 | import source source from "x";
    |                    ^
  2 |
Cause: [1:20]: Import source must be string"
`;

exports[`import-source-binding-source.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source source from "x";

=====================================output=====================================
import source source from "x";

================================================================================
`;

exports[`import-source-dynamic-import.js [acorn] format 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("foo");
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`import-source-dynamic-import.js [espree] format 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("foo");
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`import-source-dynamic-import.js [meriyah] format 1`] = `
"Unexpected token: 'identifier' (1:13)
> 1 | import.source("foo");
    |             ^
  2 |
Cause: [1:13]: Unexpected token: 'identifier'"
`;

exports[`import-source-dynamic-import.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import.source("foo");

=====================================output=====================================
import.source("foo");

================================================================================
`;

exports[`no-named.js [__babel_estree] format 1`] = `
"Only \`import source x from "./module"\` is valid. (1:17)
> 1 | import source { x } from "x";
    |                 ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:16)"
`;

exports[`no-named.js [acorn] format 1`] = `
"Unexpected token (1:15)
> 1 | import source { x } from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`no-named.js [babel] format 1`] = `
"Only \`import source x from "./module"\` is valid. (1:17)
> 1 | import source { x } from "x";
    |                 ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:16)"
`;

exports[`no-named.js [espree] format 1`] = `
"Unexpected token { (1:15)
> 1 | import source { x } from "x";
    |               ^
  2 |
Cause: Unexpected token {"
`;

exports[`no-named.js [meriyah] format 1`] = `
"Import source must be string (1:15)
> 1 | import source { x } from "x";
    |               ^
  2 |
Cause: [1:15]: Import source must be string"
`;

exports[`no-namespace.js [__babel_estree] format 1`] = `
"Only \`import source x from "./module"\` is valid. (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:14)"
`;

exports[`no-namespace.js [acorn] format 1`] = `
"Unexpected token (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`no-namespace.js [babel] format 1`] = `
"Only \`import source x from "./module"\` is valid. (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:14)"
`;

exports[`no-namespace.js [espree] format 1`] = `
"Unexpected token * (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Unexpected token *"
`;

exports[`no-namespace.js [meriyah] format 1`] = `
"Import source must be string (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: [1:15]: Import source must be string"
`;
